--- a/angular.json
+++ b/angular.json
@@ -108,6 +108,9 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@angular-eslint/schematics"]
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ],
+    "analytics": "420f5b89-5a87-408a-b1e6-ce706eae9065"
   }
 }
