--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "cstart": "ng serve --host 0.0.0.0",
     "server": "json-server --watch db.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "test:watch": "ng test --watch",
+    "test": "jest --no-cache",
+    "test-isolated": "jest -c=jest-isolated.config.ts --no-cache",
     "serve:ssr:my-task-board": "node dist/my-task-board/server/server.mjs",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
