--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,5 @@
 name: CI/CD pipeline
+
 on:
   push:
     branches: ['main']
@@ -7,10 +8,10 @@ on:
 
 jobs:
   CI:
-    name: Continous Integration
+    name: Continuous Integration
     runs-on: ubuntu-latest
     steps:
-      - name: Ckeckout Code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Set up Node.js
@@ -21,26 +22,31 @@ jobs:
       - name: Installing Dependencies
         run: npm install
 
-      - name: Listing
+      - name: Linting
         run: npm run lint
 
       - name: Testing
         run: npm run test
 
       - name: Building
-        run: npm run Build
+        run: npm run build
 
   CD:
-    name: Continus Deploy
+    name: Continuous Deploy
     runs-on: ubuntu-latest
     needs: CI
-        steps:
+    steps:
+      - name: Checkout Code
         uses: actions/checkout@v4
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
+
       - name: Pull Vercel Environment Information
-        run: vercell pull --yes --enviroment=production --token${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=production --token ${{ secrets.VERCEL_TOKEN }}
+
       - name: Build Project Artifacts
-        run: vercel build --prod --token${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --prod --token ${{ secrets.VERCEL_TOKEN }}
+
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prebuilt --prod --token ${{ secrets.VERCEL_TOKEN }}
